--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "project-backend-degree",
   "version": "0.0.0",
+  "engines": {
+    "node": "19.x"
+  },
   "private": true,
   "scripts": {
     "start": "node ./bin/www"
